
  HCAT-253 HBase revision manager should configure/drop znodes in the create/drop table meta hooks in the storage handler. (avandana via toffer)

  HCAT-259 Make readFields() and write() in LazyHCatRecord work (gates via khorgath)

  HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
  
  OPTIMIZATIONS

  BUG FIXES
  HCAT-380 If pig script does load then order by, hive-site.xml doesn't seem to propagate properly (toffer)

  HCAT-396 src-release leaves out lib directory (gates)

  HCAT-393 Several hcat 0.4 document fixes (daijy via gates)

  HCAT-395 Hcat 0.4 last minute doc fixes (gates)

  HCAT-382 NPE in pig when a binary field is null (rohini vi avandana)

  HCAT-386 e2e tests should respect JAVA_HOME when it's set (gates)

  HCAT-363 HCat leaks metastore connection (rohini via toffer)

  HCAT-314 HCatOutputFormat.setOutput is called more than once by HCatStorer (avandana via toffer)

  HCAT-378 Found a few source files missing Apache headers (gates)

  HCAT-377 Recent changes broke releaseaudit target (gates)

  HCAT-367 Pig writes data but partition information isn't getting updated (rohini via gates)

  HCAT-365 HCatUtil.getStorageHandler should set the configuration (traviscrawford via gates)

  HCAT-371 A few javadoc warnings have crept into HCat (gates)

  HCAT-320 Remove filtering of table properties which are not prefix with "hcat." (rohini via gates)

  HCAT-357 e2e harness: allow to run again pre-installed packages (thw via daijy)

  HCAT-356 Compilation failure due to API change in HIVE-2908 (rohini via gates)

  HCAT-354 hive-hbase-handler jar not getting put in hcat package (gates)

  HCAT-348 HCatUtil::getHiveConf(Configuration) ignores passed-in conf while creating HiveConf (gates)

  HCAT-312 Hcatalog rpms change the ownership of /usr/lib64 to hcat user (gkesavan via gates)

  HCAT-301 Reading from a table created with upper case table name throws error. (rohini via toffer)
