@@ -153,6 +153,8 @@ Release 0.4.0 - Release May 16 2012
   OPTIMIZATIONS
 
   BUG FIXES
+  HCATALOG-410 support proxy user in hcat client (thejas via daijy)
+
   HCAT-380 If pig script does load then order by, hive-site.xml doesn't seem to propagate properly (toffer)
 
   HCAT-396 src-release leaves out lib directory (gates)
